@@ -1,5 +1,5 @@
 {
 "name" : "OpenUri Plugin",
-"version" : "0.0.1",
+"version" : "0.0.3",
 "dependencies" : []
 }
